# six_dof_arm_ros2

./: README.md
my_robot_commander_cpp/: CMakeLists.txt  package.xml
my_robot_commander_cpp/src/: commander_template.cpp  test_moveit.cpp
my_robot_interfaces/: CMakeLists.txt  package.xml
my_robot_interfaces/msg/: CircleTarget.msg  PoseTarget.msg
pap_arm/: CMakeLists.txt  package.xml
pap_arm/launch/: display.launch.xml
pap_arm/rviz/: rviz.rviz
pap_arm/urdf/: claw.xacro  common_properties.urdf.xacro  gripper.xacro  pap_arm.ros2_control.xacro  pap_arm.urdf  pap_arm.xacro  pap_arm_gazebo.xacro  pap_arm_links.xacro  six_dof_arm.xacro  six_dof_arm_links.xacro
pap_arm_bringup/: CMakeLists.txt  package.xml
pap_arm_bringup/config/: gazebo_bridge.yaml  ros2_controllers.yaml
pap_arm_bringup/launch/: gazebo_launch.xml  moveit_launch.xml  pap_arm_gazebo.xml  six_dof_arm_gazebo.xml
pap_arm_bringup/worlds/: test_world.sdf
pap_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
pap_arm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  pap_arm.ros2_control.xacro  pap_arm.srdf  pap_arm.urdf.xacro  ros2_controllers.yaml
pap_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
six_dof_arm/: CMakeLists.txt  package.xml
six_dof_arm/launch/: display.launch.xml
six_dof_arm_bringup/: CMakeLists.txt  package.xml
(+5 files in other folders)
